Set up testing "framework"